--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^18.3.1",
+    "react/": "https://aistudiocdn.com/react@^18.3.1/",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.77.0",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
     "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
     "@stripe/stripe-js": "https://aistudiocdn.com/@stripe/stripe-js@^3.0.7",
-    "@stripe/react-stripe-js": "https://aistudiocdn.com/@stripe/react-stripe-js@^2.6.0"
+    "@stripe/react-stripe-js": "https://aistudiocdn.com/@stripe/react-stripe-js@^2.6.0",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6"
   }
 }
 </script>
